- Added new dialog for SSH removal which allows people to choose which shared files to remove
- Made it so that SSH installation tries to reboot the phone automatically before requesting the user to do so manually
- Added a 3rd reboot to SSH installation so that chmod isn't being run perpetually (chewing up some battery life).  Yes, I should have done this a long time ago. :)


v1.4 beta 3 - 02/22/08

- iTunes 7.6.1 support
- Cleaned up the RAM disk creation code a lot


v1.4 beta 2 - 02/13/08

- Identical to beta 1, except it's compiled to work on Mac OS X 10.4 (in addition to 10.5)


v1.4 beta - 02/13/08

- Changed copyright dates for 2008
- Cleaned up libPhoneInteraction a bit so that internally used functions are hidden from application developers.  Also refactored MobileDevice private function code out into a separate class.
- Changed title of SSH libarmfp.dylib alert dialog from "Failure" to "Alert" to make things clearer
- Added better handling for cases where some phone information can't be obtained (doesn't fail outright)
- Added 1.1.3 jailbreak (thanks to Zibri for the method)
- Removed old anySIM-based SIM unlock and put in new gunlock method (thanks to Geohot for this)
- Added documentation for usage with firmware 1.1.3
- Updated the other documentation accordingly


v1.3.2 beta - 01/16/08

- Added iTunes 7.6 compatibility


v1.3.1 (Hacker-Pschorr) - 12/15/07

- Added instructions for upgrading from 1.1.1 to 1.1.2
- Made UI look proper on Leopard (all text should have been black)
- Fixed a major bug in setting the correct file permissions for anySIM
- Added more credits for anySIM
- Added serial number to Info tab


v1.3 (Velvet Fog) - 12/14/07

- Added 1.1.2 compatibility
- Added iTunes 7.5 compatibility (no need for for the MobDev tool I created earlier) -- thanks to planetbeing for this
- Removed previous ringtone syncing code (not needed with 1.1.2 or MeCCA patched 1.1.1)